Change image extensions

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ body, html {
 </style>
 </head>
 <body>
-<img id="container" src="lime.svg" alt="Lime">
-<img id="object" src="face.svg" alt="Eyes">
+<img id="container" src="lime.jpeg" alt="Lime">
+<img id="object" src="face.jpeg" alt="Eyes">
 <script>
 document.addEventListener('mousemove', function(e) {
   var object = document.getElementById('object');
