Fix image sizing

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@ body, html {
 
 #container {
   position: relative;
-  width: calc(100% - 20px); /* Account for 10px margin on each side */
-  height: calc(100% - 20px); /* Account for 10px margin on top and bottom */
+  width: 45px;
+  height: 45px;
   margin: 10px;
+}
+
+#object {
+  width: 45px;
+  height: 45px;
 }
 </style>
 </head>
