--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body, html {
   position: absolute;
   width: 45px;
   height: auto;
+  margin: 10px;
 }
 </style>
 </head>
@@ -37,8 +38,8 @@ document.addEventListener('mousemove', function(e) {
   var mouseY = e.clientY - container.getBoundingClientRect().top;
   
   // Calculate the position of the eyes relative to the cursor position within the lime container
-  var offsetX = (mouseX - (container.offsetWidth / 2)) * 0.005; // Adjust the factor to control eye movement
-  var offsetY = (mouseY - (container.offsetHeight / 2)) * 0.005; // Adjust the factor to control eye movement
+  var offsetX = (mouseX - (container.offsetWidth / 2)) * 0.01; // Adjust the factor to control eye movement
+  var offsetY = (mouseY - (container.offsetHeight / 2)) * 0.01; // Adjust the factor to control eye movement
   
   // Set the position of the eyes
   object.style.left = (container.offsetWidth / 2 - object.offsetWidth / 2 + offsetX) + 'px';
