Change file extension

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {
 </style>
 </head>
 <body>
-  <img id="container" src="lime.jpeg" alt="Lime">
+  <img id="container" src="lime.png" alt="Lime">
   <img id="object" src="face.png" alt="Eyes">
 <script>
 document.addEventListener('mousemove', function(e) {
