--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body, html {
 </head>
 <body>
   <div id="container">
-    <img id="lime" src="lime.png" alt="Lime">
+    <img id="container" src="lime.png" alt="Lime">
     <img id="object" src="face.png" alt="Eyes">
   </div>
 <script>
