--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Buddy
-</title>
+<title>Web Buddy</title>
 <style>
 body, html {
   height: 100%;
@@ -20,6 +19,7 @@ body, html {
 }
 
 #object {
+  display: none; /* Initially hide the face image */
   position: absolute;
   width: 65px;
   height: auto;
@@ -31,38 +31,24 @@ body, html {
 }
 
 #container:hover #object {
-  content: url('smile.png'); /* Replace the face with smile.png when hovering */
+  display: block; /* Show the face image when hovering */
 }
 
 #container:not(:hover) #object {
-  content: url('face.png'); /* Show the original face.png when not hovering */
+  display: none; /* Hide the face image when not hovering */
 }
 </style>
 </head>
 <body>
   <div id="container">
-    <img id="container" src="lime.png" alt="Lime">
+    <img id="container-img" src="lime.png" alt="Lime">
     <img id="object" src="face.png" alt="Eyes">
   </div>
 <script>
-// Preload images
-var images = ['face.png', 'smile.png'];
-preloadImages(images);
-
-function preloadImages(array) {
-  if (!preloadImages.list) {
-    preloadImages.list = [];
-  }
-  for (var i = 0; i < array.length; i++) {
-    var img = new Image();
-    img.src = array[i];
-    preloadImages.list.push(img);
-  }
-}
-
 document.addEventListener('mousemove', function(e) {
   var object = document.getElementById('object');
   var container = document.getElementById('container');
+  var containerImg = document.getElementById('container-img');
   
   // Calculate the position of the cursor relative to the container
   var mouseX = e.clientX - container.getBoundingClientRect().left;
@@ -75,7 +61,28 @@ document.addEventListener('mousemove', function(e) {
   // Set the position of the eyes
   object.style.left = (container.offsetWidth / 2 - object.offsetWidth / 2 + offsetX) + 'px';
   object.style.top = (container.offsetHeight / 2 - object.offsetHeight / 2 + offsetY) + 'px';
+  
+  // Show the face image when the cursor moves for the first time
+  object.style.display = 'block';
+  containerImg.style.display = 'none'; // Hide the lime image
+  // Remove the event listener to prevent further calls
+  document.removeEventListener('mousemove', handleFirstMove);
 });
+
+// Event handler to handle the first cursor movement
+function handleFirstMove(e) {
+  var object = document.getElementById('object');
+  var containerImg = document.getElementById('container-img');
+  
+  // Show the face image when the cursor moves for the first time
+  object.style.display = 'block';
+  containerImg.style.display = 'none'; // Hide the lime image
+  // Remove the event listener to prevent further calls
+  document.removeEventListener('mousemove', handleFirstMove);
+}
+
+// Add event listener to detect the first cursor movement
+document.addEventListener('mousemove', handleFirstMove);
 </script>
 </body>
 </html>
