--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@ body, html {
     <img id="object" src="face.png" alt="Eyes">
   </div>
 <script>
+// Preload images
+var images = ['face.png', 'smile.png'];
+preloadImages(images);
+
+function preloadImages(array) {
+  if (!preloadImages.list) {
+    preloadImages.list = [];
+  }
+  for (var i = 0; i < array.length; i++) {
+    var img = new Image();
+    img.src = array[i];
+    preloadImages.list.push(img);
+  }
+}
+
 document.addEventListener('mousemove', function(e) {
   var object = document.getElementById('object');
   var container = document.getElementById('container');
