--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Buddy</title>
+<title>Web Buddy
+</title>
 <style>
 body, html {
   height: 100%;
@@ -19,7 +20,6 @@ body, html {
 }
 
 #object {
-  display: none; /* Initially hide the face image */
   position: absolute;
   width: 65px;
   height: auto;
@@ -40,7 +40,7 @@ body, html {
 </style>
 </head>
 <body>
-  <div id="lime">
+  <div id="container">
     <img id="container" src="lime.png" alt="Lime">
     <img id="object" src="face.png" alt="Eyes">
   </div>
